--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Tech Bridge</title>
     <script src="index.js"></script>
 </head>
-<body>
-    Tech Bridge
 
+<body>
+    <h1>Tech Bridge</h1>
     <!-- <div class="container">
               <div class="row">
                 <div class="custom-control custom-checkbox">
@@ -109,4 +113,5 @@
 
     </div> -->
 </body>
+
 </html>
