--- a/index.html
+++ b/index.html
@@ -14,6 +14,29 @@
 
 <body>
     <h1>Tech Bridge</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <input type="text" placeholder="Full Name">
+            </div>
+            <div class="col">
+                <input type="text" placeholder="Organization">
+            </div>
+            <div class="col">
+                <input type="text" placeholder="SC Tech Bridge">
+            </div>
+            <div class="col">
+                <input type="text" placeholder="Uniformed Officer">
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <button class="btn btn-p
+            330
+            
+            rimary">Add Contact</button>
+        </div>
+    </div>
     <!-- <div class="container">
               <div class="row">
                 <div class="custom-control custom-checkbox">
@@ -113,5 +136,4 @@
 
     </div> -->
 </body>
-
-</html>
+</html> 
