--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
         </div>
         <br>
         <div class="row">
-            <button class="btn btn-p
-            330
-            
-            rimary">Add Contact</button>
+            <button class="btn btn-primary">Add Contact</button>
         </div>
     </div>
     <!-- <div class="container">
