--- a/index.html
+++ b/index.html
@@ -9,29 +9,34 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Tech Bridge</title>
-    <script src="index.js"></script>
+
 </head>
 
 <body>
     <h1>Tech Bridge</h1>
-    <div class="container">
-        <div class="row">
+    <div class="container" id="form">
+        <div class="row" id="contactDetails">
             <div class="col">
-                <input type="text" placeholder="Full Name">
+                <input type="text" id="fullname" name="fullname" placeholder="Full Name">
             </div>
             <div class="col">
-                <input type="text" placeholder="Organization">
+                <input type="text" id="organization" name="organization" placeholder="Organization">
             </div>
             <div class="col">
-                <input type="text" placeholder="SC Tech Bridge">
+                <input type="checkbox" id="relationTechBridge" name="relationTechBridge" placeholder="Relationship because of SC Tech Bridge">
             </div>
             <div class="col">
-                <input type="text" placeholder="Uniformed Officer">
+                <input type="checkbox" id="uniformed" name="uniformed" placeholder="Uniformed Service Member">
             </div>
+            <br>
+            <br>
         </div>
         <br>
         <div class="row">
-            <button class="btn btn-primary">Add Contact</button>
+            <button class="btn btn-primary" name="addContactBtn" id="addContactBtn">Add Contact</button>
+        </div>
+        <div class="row">
+            <button class="btn btn-primary" name="submitBtn" id="submitBtn">Submit</button>
         </div>
     </div>
     <!-- <div class="container">
@@ -132,5 +137,8 @@
           </div>
 
     </div> -->
+
 </body>
-</html> 
+<script src="index.js"></script>
+
+</html>
